--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/stripe-js": "^5.5.0",
     "@types/micro": "^7.3.7",
     "axios": "^1.7.9",
+    "micro": "^10.0.1",
     "micro-cors": "^0.1.1",
     "mysql2": "^3.12.0",
     "next": "15.1.4",
